--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Rebecca",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "mongoose": "^8.9.5",
     "nodemon": "^3.1.9"
   }
